# fitdecode

./: .editorconfig  .flake8  .gitignore  .pytest.ini  .readthedocs.yml  .travis.yml  HISTORY.rst  LICENSE.txt  MANIFEST.in  README.rst  TODO.txt  clean.cmd  fitdecode.sublime-project  pyproject.toml  readthedocs.yml  requirements-dev.in  requirements.in  setup.cfg  setup.py
.github/workflows/: python-test.yml
cmd/: fitjson  fitjson.cmd  fittxt  fittxt.cmd
docs/: conf.py  index.rst  make.cmd  make.py  reference.rst  todo.rst
docs/reference/: decoder.rst  exceptions.rst  processors.rst  reader.rst  records.rst  types.rst  utils.rst
fitdecode/: __init__.py  __meta__.py  __version__.py  decoder.py  exceptions.py  processors.py  profile.py  reader.py  records.py  types.py  utils.py
fitdecode/cmd/: fitjson.py  fittxt.py
scripts/: fitdump.py  generate_profile.py  unit_tool.py
tests/: __init__.py  test_reader.py
tests/files/: garmin-fr935-cr.fit
tools/: fitjson.py  generate_profile.py  py.cmd  python.cmd
