[metadata]
license_file = LICENSE.txt

[bdist_wheel]
universal = 0

[flake8]
exclude =
    .git,
    __pycache__,
    docs/,
    fitdecode/__init__.py,
    tmp/
ignore =
    # The default ignore list:
    #E121,E123,E126,E226,E24,E704,
    # Our additions:
    # E241: multiple spaces after ':'
    # E301: expected 1 blank line, found 0
    # E402: module level import not at top of file
    # E501: line too long
    # E704: multiple statements on one line (def)
    # F405: 'X' may be undefined, or defined from star imports
    E241,E301,E402,E501,E704,F405
