[metadata]
license_file = LICENSE.txt

[bdist_wheel]
universal = 0

[flake8]
extend_exclude =
    docs/,
    fitdecode/__init__.py,
    fitdecode/profile.py,
    tests/test_reader.py,
    tmp/,
    tools/generate_profile.py
max_complexity = 25
max_line_length = 88
max_doc_length = 88
statistics = True
# extend_ignore =
ignore =
    # default ignore list is:
    #   E121,E123,E126,E226,E24,E704,W503,W504
    # our ignore list:
    #   E265 block comment should start with '# '
    #   E501 line too long
    #   W503 line break before binary operator
    #   W504 line break after binary operator
    W504
