[metadata]
name = fitdecode
version = attr: fitdecode.__version__
license = MIT
license_files = LICENSE.txt
description = FIT file parser and decoder
url = https://github.com/polyvertex/fitdecode
project_urls =
    Source Code = https://github.com/polyvertex/fitdecode
    Issue Tracker = https://github.com/polyvertex/fitdecode/issues
keywords = fit, fitparse, ant, file, parse, parser, decode, decoder
author = Jean-Charles Lefebvre
author_email = polyvertex@gmail.com
# long_description = file: README.rst
long_description = file: README.rst, HISTORY.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 4 - Beta
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13

[options]
packages = find:
include_package_data = True
zip_safe = True
python_requires = >= 3.6
install_requires = file: requirements.in
tests_require =

[options.packages.find]
# where = src  # . by default
include = fitdecode*
exclude =

[options.entry_points]
console_scripts =
    fitjson = fitdecode.cmd.fitjson:main
    fittxt = fitdecode.cmd.fittxt:main

[options.extras_require]
dev = file: requirements-dev.in

# [sdist]
# this causes check_manifest troubles due to having more than one file in dist/
# formats = gztar, zip
